# com0com

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Changes.txt  README.md  cncport.inf  com0com.inf  comport.inf
NSIS/: CMakeLists.txt  install.nsi
cert/: com0com.cer  com0com.pfx  com0com.pvk
setup/: CMakeLists.txt
setupc/: CMakeLists.txt
setupg/: AssemblyInfo.cpp  CMakeLists.txt  UpgradeLog.htm  app.aps  portprms.cpp  setup.vcxproj  setup.vcxproj.filters
sys/: CMakeLists.txt
